# ChangeLog for net-dialup/mingetty
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-dialup/cvs-repo/gentoo-x86/net-dialup/mingetty/ChangeLog,v 1.23 2005/03/19 15:27:03 kloeri Exp $

  19 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> mingetty-1.07.3.ebuild:
  Stable on alpha.

  08 Feb 2005; Gustavo Zacarias <gustavoz@gentoo.org> mingetty-1.07.3.ebuild:
  Stable on sparc

  07 Feb 2005; Alin Nastac <mrness@gentoo.org> mingetty-1.07.3.ebuild:
  Mark stable on x86.

*mingetty-1.07.3 (20 Nov 2004)

  20 Nov 2004; Alin Nastac <mrness@gentoo.org> metadata.xml,
  +mingetty-1.07.3.ebuild:
  Version bump.

  02 Oct 2004; <solar@gentoo.org> +files/mingetty-1.00-strerror.patch,
  mingetty-1.00.3.ebuild:
  replaced legacy interface sys_errlist[errno] with strerror(errno)

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  mingetty-1.00.3.ebuild:
  virtual/glibc -> virtual/libc

  13 May 2004; Michael McCabe <randy@gentoo.org> mingetty-1.00.3.ebuild:
  Added s390 keywords

  09 May 2004; Ilya A. Volynets-Evenbach <iluxa@gentoo.org>
  mingetty-1.00.3.ebuild:
  This has been ~mips long enough.

  03 May 2004; Tom Gall <tgall@gentoo.org> mingetty-1.00.3.ebuild:
  stable on ppc64

  08 Mar 2004; Bartosch Pixa <darkspecter@gentoo.org> mingetty-1.00.3.ebuild:
  set ppc in keywords

  06 Mar 2004; Ilya A. Volynets-Evenbakh <ilya@total-knowledge.com>
  mingetty-1.00.3.ebuild:
  mark as ~mips

  18 Jan 2004; Jason Wever <weeve@gentoo.org> mingetty-1.00.3.ebuild:
  Marked stable on sparc.

  06 Jan 2004; <agriffis@gentoo.org> mingetty-1.00.3.ebuild:
  Stable on ia64 for bug 36061

  19 Dec 2003; Seemant Kulleen <seemant@gentoo.org> mingetty-1.00.3.ebuild:
  move to rpm eclass and eutils eclass to use rpm_src_unpack magic and epatch,
  respectively

  19 Nov 2003; Heinrich Wendel <lanius@gentoo.org> metadata.xml:
  metadata.xml

  19 Oct 2003; Jason Wever <weeve@gentoo.org> mingetty-1.00.3.ebuild: